第三次初始化

--- a/01.html
+++ b/01.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<style>
+		h1{
+			color: pink;
+			text-shadow: 5px 5px 5px lightgray;
+		}
+		</style>
 	</head>
 	<body>
 		<h1>粉色海洋你轻轻唱</h1>
